--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -39,7 +39,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text=""
+                    android:text="Contenido de la pregunta?"
                     android:ellipsize="end"
                     android:maxLines="3"
                     android:singleLine="false"
