--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,12 @@
     android:paddingRight="16dp"
     android:transitionGroup="false"
     android:touchscreenBlocksFocus="false">
+
+    <include
+        android:id="@+id/loading_login"
+        layout="@layout/loading_view">
+    </include>
+
     <ImageView android:src="@mipmap/logo_6"
         android:layout_width="48dp"
         android:layout_height="48dp"
@@ -23,7 +29,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"></android.support.design.widget.TextInputLayout>
 
-    <EditText android:id="@+id/input_email"
+    <EditText android:id="@+id/input_user_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
@@ -54,7 +60,7 @@
         android:textColorLink="#cb5858" />
     <Button
         android:id="@+id/btn_enter"
-        android:onClick="loginVerify"
+        android:onClick="login"
         android:layout_width="120dp"
         android:layout_height="40dp"
         android:text="@string/btn_enter"
@@ -67,34 +73,7 @@
         android:layout_alignEnd="@+id/button_gmail"
         android:layout_alignLeft="@+id/button_gmail"
         android:layout_alignStart="@+id/button_gmail" />
-    <!--
-            <Button
-                android:layout_width="120dp"
-                android:layout_height="35dp"
-                android:text="@string/btn_enter"
-                android:textColor="#35adbd"
-                android:id="@+id/btn_enter"
-                android:background="@drawable/background_button_white"
-                android:layout_gravity="center_vertical"
-                android:layout_marginTop="40dp"
-                android:layout_below="@+id/input_password"
-                android:layout_toLeftOf="@+id/imageView"
-                android:layout_toStartOf="@+id/imageView" />
 
-            <Button
-                android:layout_width="120dp"
-                android:layout_height="35dp"
-                android:text="@string/btn_register"
-                android:id="@+id/button"
-                android:onClick="doRegister"
-                android:clickable="true"
-                android:background="@drawable/background_button_white"
-                android:textColor="#35adbd"
-                android:layout_gravity="center_vertical"
-                android:layout_alignTop="@+id/btn_enter"
-                android:layout_toRightOf="@+id/imageView"
-                android:layout_toEndOf="@+id/imageView" />
-            -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
