--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/btn_continue"
         android:layout_marginBottom="120dp"
-        android:onClick="doRegister"
+        android:onClick="doSignUp"
         android:text="@string/btn_register"
         android:textColor="#ffffff"
         android:background="@drawable/background_button_inicio"
