--- a/app/src/main/res/layout/fragment_list_questions.xml
+++ b/app/src/main/res/layout/fragment_list_questions.xml
@@ -11,7 +11,7 @@
     </include>
 
     <!--<TextView
-        android:id="@+id/test"
+        android:id="@+id/txt_test"
         android:text=""
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
