--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -18,11 +18,13 @@
             android:weightSum="1">
             <ImageView
                 android:id="@+id/photoUser"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="100dp"
+                android:layout_height="105dp"
                 android:src="@drawable/ico_profile_grey"
                 android:layout_marginLeft="120dp"
                 android:layout_gravity="center"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
                 android:layout_weight="0.06" />
             <Button
                 android:layout_width="24dp"
@@ -42,16 +44,27 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <!-- User -->
-            <EditText android:id="@+id/input_user"
+            <EditText android:id="@+id/input_user_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:hint="Nombre de Usuario"
+                android:layout_below="@+id/textView"
+                android:layout_marginTop="5dp"
+                android:textSize="16dp"
+                android:textColorHint="#c2c2c2"/>
+
+            <!--<EditText android:id="@+id/input_user"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:hint="Nombres"
                 android:layout_below="@+id/textView"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="5dp"
                 android:textSize="16dp"
-                android:textColorHint="#c2c2c2"/>
+                android:textColorHint="#c2c2c2"/>-->
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
