--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,18 +62,16 @@
     <Button
         android:id="@+id/btn_enter"
         android:onClick="login"
-        android:layout_width="220dp"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
         android:text="@string/btn_enter"
         android:background="@drawable/button_fill_primary"
         android:textColor="@color/colorPrimaryText"
-        android:layout_marginLeft="0dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
         android:layout_marginTop="40dp"
         android:layout_below="@+id/input_password"
-        android:layout_alignRight="@+id/login_button"
-        android:layout_alignEnd="@+id/login_button"
-        android:layout_alignLeft="@+id/login_button"
-        android:layout_alignStart="@+id/login_button" />
+    />
 
     <!--
             <Button
@@ -124,11 +122,17 @@
 
      <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_below="@+id/btn_enter"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="55dp"
+         android:layout_marginLeft="50dp"
+         android:layout_marginRight="50dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="25dp"
+        style="@style/FacebookLoginButton"
         />
 </RelativeLayout>
